--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
         "tailwindcss": "^3.2.1",
         "vite": "^4.0.0",
         "vue": "^3.2.41"
+    },
+    "dependencies": {
+        "@unhead/vue": "^1.11.18",
+        "vue-recaptcha": "^3.0.0-alpha.6",
+        "vue-recaptcha-v3": "^2.0.1"
     }
 }
